--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "method-override": "^3.0.0",
     "mongoose": "^8.6.0",
     "pug": "^3.0.3"
   }
