--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "express": "^4.19.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "install": "^0.13.0",
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.6.0",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
+    "npm": "^10.9.0",
     "pug": "^3.0.3",
     "streamifier": "^0.1.1",
     "tinymce": "^7.3.0"
